@@ -6,11 +6,12 @@
 #if !defined(AFX_STDAFX_H__EB0CB528_6505_4130_843B_9CA567127807__INCLUDED_)
 #define AFX_STDAFX_H__EB0CB528_6505_4130_843B_9CA567127807__INCLUDED_
 
-#if _MSC_VER > 1000
 #pragma once
-#endif // _MSC_VER > 1000
 
 #define VC_EXTRALEAN		// Exclude rarely-used stuff from Windows headers
+#define _WIN32_WINNT  _WIN32_WINNT_WINXP  // Support Windows XP and later
+#define _WIN32_IE     _WIN32_IE_IE70      // Support IE 7.0 and later
+#include <SDKDDKVer.h>
 
 #include <afxwin.h>         // MFC core and standard components
 #include <afxext.h>         // MFC extensions
