@@ -8,6 +8,11 @@
 #include <cppunit/portability/CppUnitDeque.h>
 #include <string>
 
+#if CPPUNIT_NEED_DLL_DECL
+#pragma warning( push )
+#pragma warning( disable: 4251 )  // X needs to have dll-interface to be used by clients of class Z
+#endif 
+
 CPPUNIT_NS_BEGIN
 
 /*! \brief Test plug-ins parameters.
@@ -29,6 +34,10 @@ private:
 
 
 CPPUNIT_NS_END
+
+#if CPPUNIT_NEED_DLL_DECL
+#pragma warning( pop )
+#endif
 
 #endif // !defined(CPPUNIT_NO_TESTPLUGIN)
 
