@@ -4,6 +4,11 @@
 #include <cppunit/Portability.h>
 #include <string>
 
+#if CPPUNIT_NEED_DLL_DECL
+#pragma warning( push )
+#pragma warning( disable: 4251 )  // X needs to have dll-interface to be used by clients of class Z
+#endif 
+
 CPPUNIT_NS_BEGIN
 
 class Test;
@@ -33,6 +38,10 @@ public:
 
 
 CPPUNIT_NS_END
+
+#if CPPUNIT_NEED_DLL_DECL
+#pragma warning( pop )
+#endif
 
 #endif // CPPUNIT_PROTECTORCONTEXT_H
 
