@@ -6,11 +6,13 @@
 #if !defined(AFX_STDAFX_H__2CCC624C_C151_496F_A333_28951EA9A8D3__INCLUDED_)
 #define AFX_STDAFX_H__2CCC624C_C151_496F_A333_28951EA9A8D3__INCLUDED_
 
-#if _MSC_VER > 1000
 #pragma once
-#endif // _MSC_VER > 1000
 
 #define VC_EXTRALEAN		// Exclude rarely-used stuff from Windows headers
+#define OEMRESOURCE         // Enable OIC_* definitions
+#define _WIN32_WINNT  _WIN32_WINNT_WINXP  // Support Windows XP and later
+#define _WIN32_IE     _WIN32_IE_IE70      // Support IE 7.0 and later
+#include <SDKDDKVer.h>
 
 #pragma warning( disable : 4786 )  // warning of hell: debug symbol too long...
 
